--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "node": ">=4"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "bulma": "0.7.2",
+    "jquery": "^3.3.1",
+    "prismjs": "^1.15.0"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -30,6 +32,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
+    "node-sass-tilde-importer": "^1.0.2",
     "run-sequence": "^1.2.2",
     "wiredep": "^4.0.0"
   },
