--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trunks-ui",
-  "version": "0.2.14-beta",
+  "version": "0.3.0-beta",
   "private": true,
   "main": "./dist-lib/trunks.scss",
   "scripts": {
@@ -26,9 +26,10 @@
     "font-awesome": "4.7.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-babel": "^8.0.0",
+    "gulp-babel": "^7.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-cssnano": "^2.1.3",
+    "gulp-dart-sass": "^0.9.1",
     "gulp-eslint": "^6.0.0",
     "gulp-filter": "^6.0.0",
     "gulp-htmlmin": "^5.0.1",
