--- a/package.json
+++ b/package.json
@@ -14,38 +14,37 @@
     "node": ">=12"
   },
   "dependencies": {
-    "bulma": "0.8.0",
+    "bulma": "0.9.0",
     "global": "^4.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "browser-sync": "^2.26.7",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "browser-sync": "^2.26.12",
     "del": "^5.1.0",
     "font-awesome": "4.7.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-babel": "^7.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-cssnano": "^2.1.3",
-    "gulp-dart-sass": "^0.9.1",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-filter": "^6.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^6.1.1",
-    "gulp-load-plugins": "^2.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-load-plugins": "^2.0.4",
     "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-useref": "^4.0.0",
     "main-bower-files": "^2.13.3",
     "node-sass-tilde-importer": "^1.0.2",
-    "prismjs": "^1.15.0",
-    "run-sequence": "^1.2.2",
+    "prismjs": "^1.21.0",
+    "run-sequence": "^2.2.1",
     "wiredep": "^4.0.0"
   },
   "eslintConfig": {
