--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "node": ">=12"
   },
   "dependencies": {
-    "bulma": "0.9.0",
-    "global": "^4.4.0"
+    "bulma": "0.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
