--- a/package.json
+++ b/package.json
@@ -1,62 +1,25 @@
 {
   "name": "trunks-ui",
-  "version": "0.6.6-beta",
+  "version": "0.7.0",
   "private": true,
   "main": "./dist-lib/trunks.scss",
+  "engines": {
+    "bun": ">=1",
+    "pnpm": "use bun",
+    "yarn": "use bun"
+  },
   "scripts": {
+    "dev": "cd ./web && bun start",
     "build": "gulp",
-    "build_lib": "gulp buildLib",
     "pack_lib": "npm pack ./dist-lib",
-    "package": "npm run build_lib && npm run pack_lib",
+    "package": "npm run build && npm run pack_lib",
     "publish": "npm publish ./dist-lib"
   },
-  "engines": {
-    "node": ">=12"
-  },
   "dependencies": {
-    "bulma": "0.9.2"
+    "bulma": "1.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "browser-sync": "^2.26.12",
     "del": "^5.1.0",
-    "font-awesome": "4.7.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-babel": "^8.0.0",
-    "gulp-cache": "^1.1.3",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-eslint": "^6.0.0",
-    "gulp-filter": "^6.0.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-load-plugins": "^2.0.4",
-    "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.1.0",
-    "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "gulp-useref": "^4.0.0",
-    "main-bower-files": "^2.13.3",
-    "node-sass-tilde-importer": "^1.0.2",
-    "prismjs": "^1.21.0",
-    "run-sequence": "^2.2.1",
-    "wiredep": "^4.0.0"
-  },
-  "eslintConfig": {
-    "env": {
-      "es6": true,
-      "node": true,
-      "browser": true
-    },
-    "rules": {
-      "quotes": [
-        2,
-        "single"
-      ]
-    }
+    "gulp": "^4.0.2"
   }
 }
