--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "trunks-ui",
-  "version": "0.7.0",
+  "version": "0.7.3-beta",
   "private": true,
-  "main": "./dist-lib/trunks.scss",
-  "engines": {
-    "bun": ">=1",
-    "pnpm": "use bun",
-    "yarn": "use bun"
-  },
+  "main": "./dist-lib/_index.scss",
   "scripts": {
     "dev": "cd ./web && bun start",
     "build": "gulp",
