--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trunks-ui",
-  "version": "0.7.14-beta",
+  "version": "0.7.0",
   "private": true,
   "main": "./dist-lib/_index.scss",
   "scripts": {
