--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trunks-ui",
   "version": "0.7.1",
   "private": true,
-  "main": "./lib/src/_index.scss",
+  "main": "./lib/_index.scss",
   "scripts": {
     "dev": "cd ./web && bun start",
     "build:gh-pages": "cd ./web && bun run build:gh-pages",
