- move config to each files - light theme only - backward compatible with tiles - not include lib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
   "scss.format.newlineBetweenSelectors": false,
   "scss.format.spaceAroundSelectorSeparator": true,
   "[scss]": {
+    "editor.formatOnPaste": false,
     "editor.formatOnSave": false
   }
 }
