--- a/web/package.json
+++ b/web/package.json
@@ -2,12 +2,12 @@
   "name": "web",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "build:gh-pages": "ng build --base-href /trunks-ui/",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "ng": "bunx ng",
+    "start": "bunx ng serve",
+    "build": "bunx ng build",
+    "build:gh-pages": "bunx ng build --base-href /trunks-ui/",
+    "watch": "bunx ng build --watch --configuration development",
+    "test": "bunx ng test"
   },
   "private": true,
   "dependencies": {
